force-app/main/default/objects/Five9__Five9Settings__c/Five9__Five9Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Five9 Call Center integration settings</description>
    <label>Five9Settings</label>
</CustomObject>