force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__AdminWS_Password__c.field-meta.xml
<CustomField>
    <fullName>Five9__AdminWS_Password__c</fullName>
    <description>Five9 administrator account password</description>
    <label>AdminWS Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>