force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__AdminWS_ReportEmail__c.field-meta.xml
<CustomField>
    <fullName>Five9__AdminWS_ReportEmail__c</fullName>
    <description>Email Five9 Admin Web Services will send reports to</description>
    <label>AdminWS ReportEmail</label>
    <type>Email</type>
</CustomField>