force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__AdminWS_URL__c.field-meta.xml
<CustomField>
    <fullName>Five9__AdminWS_URL__c</fullName>
    <description>Five9 Admin Web Services endpoint</description>
    <label>AdminWS URL</label>
    <type>Url</type>
</CustomField>