force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__Callback_CompletedStatus__c.field-meta.xml
<CustomField>
    <fullName>Five9__Callback_CompletedStatus__c</fullName>
    <label>Callback_CompletedStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>