force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__Callback_SynchEnabled__c.field-meta.xml
<CustomField>
    <fullName>Five9__Callback_SynchEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Callback_SynchEnabled</label>
    <type>Checkbox</type>
</CustomField>