force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__Check_Future_Method_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Five9__Check_Future_Method_Invocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if future from future method invocation should raise exception</description>
    <label>Check Future Method Invocation</label>
    <type>Checkbox</type>
</CustomField>