force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__Codebase__c.field-meta.xml
<CustomField>
    <fullName>Five9__Codebase__c</fullName>
    <description>Five9 integrations codebase</description>
    <label>Codebase</label>
    <type>Url</type>
</CustomField>