force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__InstallationCompleted__c.field-meta.xml
<CustomField>
    <fullName>Five9__InstallationCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is initially to false and then to true after the installation is completed</description>
    <label>InstallationCompleted</label>
    <type>Checkbox</type>
</CustomField>