force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__LM_UseOM__c.field-meta.xml
<CustomField>
    <fullName>Five9__LM_UseOM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether Outbound messages are used for list synchronization</description>
    <label>LM Use Outbound Messages</label>
    <type>Checkbox</type>
</CustomField>