force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__Screenpop_ANI_Search__c.field-meta.xml
<CustomField>
    <fullName>Five9__Screenpop_ANI_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perform search by ANI during screenpop</description>
    <label>Screenpop ANI Search</label>
    <type>Checkbox</type>
</CustomField>