force-app/main/default/objects/Five9__Five9Settings__c/fields/Five9__Screenpop_C2D_Search__c.field-meta.xml
<CustomField>
    <fullName>Five9__Screenpop_C2D_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screenpop C2D Search</label>
    <type>Checkbox</type>
</CustomField>